@@ -1,5 +1,5 @@
 /*
- * $Id: cfg.y,v 1.156 2008/04/23 12:55:17 tirpi Exp $
+ * $Id: cfg.y,v 1.157 2008/04/24 13:51:26 alfredh Exp $
  *
  *  cfg grammar
  *
@@ -352,6 +352,7 @@ static struct socket_id* mk_listen_id(char*, int, int);
 %token TCP_OPT_KEEPIDLE
 %token TCP_OPT_KEEPINTVL
 %token TCP_OPT_KEEPCNT
+%token TCP_OPT_CRLF_PING
 %token DISABLE_TLS
 %token ENABLE_TLS
 %token TLSLOG
@@ -907,6 +908,14 @@ assign_stm:
 		#endif
 	}
 	| TCP_OPT_KEEPCNT EQUAL error { yyerror("number expected"); }
+	| TCP_OPT_CRLF_PING EQUAL NUMBER {
+		#ifdef USE_TCP
+			tcp_options.crlf_ping=$3;
+		#else
+			warn("tcp support not compiled in");
+		#endif
+	}
+	| TCP_OPT_CRLF_PING EQUAL error { yyerror("boolean value expected"); }
 	| DISABLE_TLS EQUAL NUMBER {
 		#ifdef USE_TLS
 			tls_disable=$3;
