@@ -1,7 +1,7 @@
 Release notes for SIP Express Router (ser)
 ***********************************************
 
-$Id: NEWS,v 1.79 2008/04/23 21:20:43 bpintea Exp $
+$Id: NEWS,v 1.80 2008/04/24 13:51:26 alfredh Exp $
 
 
 
@@ -189,6 +189,8 @@ new config variables:
          keepalive probes, when the previous probe failed. Linux only.
   tcp_keepcnt = number (not set by default) - number of keepalives sent before
          dropping the connection. Linux only.
+  tcp_crlf_ping = yes | no (set by default) - enable CRLF keepalives aka
+         SIP outbound.
   pmtu_discovery = 0 | 1 (default 0) - set DF bit in outbound IP if enabled
   dns_srv_lb = yes | no (default no) - enable dns srv weight based load 
     balancing (see doc/dns.txt)
